<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <!--Switch
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text=""
            android:id="@+id/speed"
            android:layout_row="0"
            android:layout_column="0" /-->

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/lab_N"
            android:id="@+id/btnn"
            android:layout_row="0"
            android:layout_column="1" />

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/lab_W"
            android:id="@+id/btnw"
            android:layout_row="1"
            android:layout_column="0" />

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/lab_P"
            android:id="@+id/btnss"
            android:layout_row="1"
            android:layout_column="1" />

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/lab_E"
            android:id="@+id/btne"
            android:layout_row="1"
            android:layout_column="2" />

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/lab_S"
            android:id="@+id/btns"
            android:layout_row="2"
            android:layout_column="1" />
    </GridLayout>
</LinearLayout>
